--- a/original.html
+++ b/original.html
@@ -77,8 +77,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/59332/59332-h/59332-h.html"
-								>https://www.gutenberg.org/files/59332/59332-h/59332-h.html</a
+								href="https://www.gutenberg.org/files/59332/59332-h/59332-h.htm"
+								>https://www.gutenberg.org/files/59332/59332-h/59332-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -87,8 +87,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/2163/2163-h/2163-h.html"
-								>https://www.gutenberg.org/files/2163/2163-h/2163-h.html</a
+								href="https://www.gutenberg.org/files/2163/2163-h/2163-h.htm"
+								>https://www.gutenberg.org/files/2163/2163-h/2163-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -98,8 +98,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/2186/2186-h/2186-h.html"
-								>https://www.gutenberg.org/files/2186/2186-h/2186-h.html</a
+								href="https://www.gutenberg.org/files/2186/2186-h/2186-h.htm"
+								>https://www.gutenberg.org/files/2186/2186-h/2186-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -108,8 +108,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/13085/13085-h/13085-h.html"
-								>https://www.gutenberg.org/files/13085/13085-h/13085-h.html</a
+								href="https://www.gutenberg.org/files/13085/13085-h/13085-h.htm"
+								>https://www.gutenberg.org/files/13085/13085-h/13085-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -118,8 +118,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/23163/23163-h/23163-h.html"
-								>https://www.gutenberg.org/files/23163/23163-h/23163-h.html</a
+								href="https://www.gutenberg.org/files/23163/23163-h/23163-h.htm"
+								>https://www.gutenberg.org/files/23163/23163-h/23163-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -128,8 +128,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/32977/32977-h/32977-h.html"
-								>https://www.gutenberg.org/files/32977/32977-h/32977-h.html</a
+								href="https://www.gutenberg.org/files/32977/32977-h/32977-h.htm"
+								>https://www.gutenberg.org/files/32977/32977-h/32977-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -138,8 +138,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/54830/54830-h/54830-h.html"
-								>https://www.gutenberg.org/files/54830/54830-h/54830-h.html</a
+								href="https://www.gutenberg.org/files/54830/54830-h/54830-h.htm"
+								>https://www.gutenberg.org/files/54830/54830-h/54830-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -148,8 +148,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/62346/62346-h/62346-h.html"
-								>https://www.gutenberg.org/files/62346/62346-h/62346-h.html</a
+								href="https://www.gutenberg.org/files/62346/62346-h/62346-h.htm"
+								>https://www.gutenberg.org/files/62346/62346-h/62346-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -158,16 +158,16 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/35997/35997-h/35997-h.html"
-								>https://www.gutenberg.org/files/35997/35997-h/35997-h.html</a
+								href="https://www.gutenberg.org/files/35997/35997-h/35997-h.htm"
+								>https://www.gutenberg.org/files/35997/35997-h/35997-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
 							<p class="original__list-text">Kim (English) (as Author)</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/2226/2226-h/2226-h.html"
-								>https://www.gutenberg.org/files/2226/2226-h/2226-h.html</a
+								href="https://www.gutenberg.org/files/2226/2226-h/2226-h.htm"
+								>https://www.gutenberg.org/files/2226/2226-h/2226-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -176,8 +176,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/12089/12089-h/12089-h.html"
-								>https://www.gutenberg.org/files/12089/12089-h/12089-h.html</a
+								href="https://www.gutenberg.org/files/12089/12089-h/12089-h.htm"
+								>https://www.gutenberg.org/files/12089/12089-h/12089-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -187,8 +187,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/62942/62942-h/62942-h.html"
-								>https://www.gutenberg.org/files/62942/62942-h/62942-h.html</a
+								href="https://www.gutenberg.org/files/62942/62942-h/62942-h.htm"
+								>https://www.gutenberg.org/files/62942/62942-h/62942-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -197,8 +197,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/53507/53507-h/53507-h.html"
-								>https://www.gutenberg.org/files/53507/53507-h/53507-h.html</a
+								href="https://www.gutenberg.org/files/53507/53507-h/53507-h.htm"
+								>https://www.gutenberg.org/files/53507/53507-h/53507-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -207,8 +207,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/1858/1858-h/1858-h.html"
-								>https://www.gutenberg.org/files/1858/1858-h/1858-h.html</a
+								href="https://www.gutenberg.org/files/1858/1858-h/1858-h.htm"
+								>https://www.gutenberg.org/files/1858/1858-h/1858-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -217,8 +217,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/32772/32772-h/32772-h.html"
-								>https://www.gutenberg.org/files/32772/32772-h/32772-h.html</a
+								href="https://www.gutenberg.org/files/32772/32772-h/32772-h.htm"
+								>https://www.gutenberg.org/files/32772/32772-h/32772-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -227,8 +227,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/17689/17689-h/17689-h.html"
-								>https://www.gutenberg.org/files/17689/17689-h/17689-h.html</a
+								href="https://www.gutenberg.org/files/17689/17689-h/17689-h.htm"
+								>https://www.gutenberg.org/files/17689/17689-h/17689-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -237,8 +237,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/cache/epub/9790/pg9790.html"
-								>https://www.gutenberg.org/cache/epub/9790/pg9790.html</a
+								href="https://www.gutenberg.org/cache/epub/9790/pg9790.htm"
+								>https://www.gutenberg.org/cache/epub/9790/pg9790.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -247,8 +247,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/2828/2828-h/2828-h.html"
-								>https://www.gutenberg.org/files/2828/2828-h/2828-h.html</a
+								href="https://www.gutenberg.org/files/2828/2828-h/2828-h.htm"
+								>https://www.gutenberg.org/files/2828/2828-h/2828-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -257,8 +257,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/cache/epub/15466/pg15466.html"
-								>https://www.gutenberg.org/cache/epub/15466/pg15466.html</a
+								href="https://www.gutenberg.org/cache/epub/15466/pg15466.htm"
+								>https://www.gutenberg.org/cache/epub/15466/pg15466.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -268,8 +268,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/2334/2334-h/2334-h.html"
-								>https://www.gutenberg.org/files/2334/2334-h/2334-h.html</a
+								href="https://www.gutenberg.org/files/2334/2334-h/2334-h.htm"
+								>https://www.gutenberg.org/files/2334/2334-h/2334-h.htm</a
 							>
 						</li>
 						<li class="original__list-item">
@@ -278,8 +278,8 @@
 							</p>
 							<a
 								class="original__list-link"
-								href="https://www.gutenberg.org/files/21777/21777-h/21777-h.html"
-								>https://www.gutenberg.org/files/21777/21777-h/21777-h.html</a
+								href="https://www.gutenberg.org/files/21777/21777-h/21777-h.htm"
+								>https://www.gutenberg.org/files/21777/21777-h/21777-h.htm</a
 							>
 						</li>
 					</ul>
