--- a/quiz.html
+++ b/quiz.html
@@ -76,14 +76,10 @@
 				</div>
 				<div class="quiz__body section__body">
 					<div class="quiz__content" id="quiz">
-						<div class="quiz__questions" id="questions">
-							
-						</div>
-						<div class="quiz__results" id="results">
-							
-						</div>
+						<div class="quiz__questions" id="questions"></div>
+						<div class="quiz__results" id="results"></div>
 						<div class="quiz__controls">
-							<button class="btn-check" id="btn-check" disabled>Проверить</button>
+							<button class="btn-check" id="btn-check">Проверить</button>
 							<button class="btn-restart" id="btn-restart">Рестарт</button>
 						</div>
 					</div>
